src/pages/auth/style.module.css
.container {
  width: 100%;
  height: 100vh;
  display: flex;
}

.quote__side {
  width: 45%;
  height: 100%;
  background-image: url("../../assets/images/auth__bg.jpg");
  background-size: cover;
  display: flex;
  justify-content: end;
  align-items: center;
  padding: 0 50px 0 0;
  box-sizing: border-box;
}

.quote__container {
  width: 40%;
  height: max-content;
}

p {
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 38px;
  color: #ffffff;
}

.form__side {
  width: 55%;
  height: 100%;
}

@media screen and (max-width: 1500px) {
  .quote__container {
    width: 60%;
  }
}

@media screen and (max-width: 1092px) {
  .quote__container {
    width: 80%;
  }
}

@media screen and (max-width: 790px) {
  .container {
    flex-direction: column;
  }
  .quote__side {
    display: none;
  }
  .form__side {
    width: 100%;
  }
}

